@@ -69,9 +69,9 @@
 
         <!-- Test Dependency Versions -->
         <junit.jupiter.version>5.4.0</junit.jupiter.version>
-        <assertj.version>3.6.2</assertj.version>
-        <awaitility.version>2.0.0</awaitility.version>
-        <mockito.version>2.7.5</mockito.version>
+        <assertj.version>3.12.2</assertj.version>
+        <awaitility.version>3.1.6</awaitility.version>
+        <mockito.version>2.27.0</mockito.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
@@ -247,6 +247,26 @@
                     <suppressionsLocation>checkstyle_ignore.xml</suppressionsLocation>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M3</version>
+                <dependencies>
+<!--                    <dependency>-->
+<!--                        <groupId>org.apache.maven.surefire</groupId>-->
+<!--                        <artifactId>surefire-junit3</artifactId>-->
+<!--                        <version>3.0.0-M3</version>-->
+<!--                    </dependency>-->
+<!--                    <dependency>-->
+<!--                        <groupId>org.apache.maven.surefire</groupId>-->
+<!--                        <artifactId>surefire-testng</artifactId>-->
+<!--                        <version>3.0.0-M3</version>-->
+<!--                    </dependency>-->
+                </dependencies>
+                <configuration>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
@@ -299,18 +319,6 @@
                                 </goals>
                             </execution>
                         </executions>
-                    </plugin>
-
-                    <plugin>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>3.0.0-M3</version>
-                        <dependencies>
-                            <dependency>
-                                <groupId>org.junit.platform</groupId>
-                                <artifactId>junit-platform-surefire-provider</artifactId>
-                                <version>1.3.2</version>
-                            </dependency>
-                        </dependencies>
                     </plugin>
 
                     <plugin>
